fix conflict text-align

--- a/dataframe_image/converter/browser/static/style.css
+++ b/dataframe_image/converter/browser/static/style.css
@@ -28,7 +28,6 @@ tr, th, td {{
 
 th {{
     font-weight:bold; 
-    text-align:left;
     }}
 
 tbody tr:nth-child(odd){{
